Add code coverage report tool (jacoco)

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <org.slf4j-version>1.6.1</org.slf4j-version>
         <jackson-version>2.4.4</jackson-version>
         <postgres.driver.version>9.3-1100-jdbc41</postgres.driver.version>
+        <jacoco.version>0.7.9</jacoco.version>
     </properties>
 
 
@@ -203,6 +204,46 @@
                     <httpsPort>8443</httpsPort>
                     <keystoreFile>${basedir}/other/keystore.jks</keystoreFile>
                     <keystorePass>secret</keystorePass>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>post-unit-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+
+                            <dataFile>target/jacoco.exec</dataFile>
+                            <!-- Sets the output directory for the code coverage report. -->
+                            <outputDirectory>target/jacoco-ut</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <systemPropertyVariables>
+                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
